# LandauGauss

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCache.txt  CXX11.cmake  FindROOT.cmake  Makefile  cmake_install.cmake  install_manifest.txt
cmake/main/: LandauGaussDict.cxx  LandauGaussDict.h  Makefile  cmake_install.cmake  libLandauGaussFit.dylib
exe/src/: main.cxx
lib/include/: landgausFit.h
lib/src/: loopOverFolder.cpp
main/: CMakeLists.txt
main/include/: LandauGaussFitLinkDef.h  fitFunctionClass.hh  landgausFit.h
main/src/: fitFunctionClass.cpp  landgausFit.cpp  loopOverFolder.cpp
